The dialog logon was corrected also for the Appleseed and the Education themes. Now the scrollbar doesn't appear.

--- a/WebSites/AppleseedWebApplication/Design/Themes/Appleseedcms/default.css
+++ b/WebSites/AppleseedWebApplication/Design/Themes/Appleseedcms/default.css
@@ -345,13 +345,6 @@ div.div_ev_Table table td{
     padding: 2px;
 }
 
-table.ModuleWrap,
-div#mID0
-{
-	margin:0 auto ;
-    padding: 40px 30px;
-    width:900px;
-    max-width:900px!important;}
 
 table.ModuleWrap td{
     padding-top: 3px;
